<resources>
    <string name="app_name">Gestor Reservas</string>
    <string name="reservar">Reservar</string>
    <string name="liberar_mesa">Liberar Mesa</string>
    <string name="numero_mesa">Número Mesa</string>
    <string name="salvar_operacao">Salvar Operação</string>
    <string name="reservar_todas_mesas">Reservar Todas as Mesas</string>
    <string name="n_1">1</string>
    <string name="n_2">2</string>
    <string name="n_3">3</string>
    <string name="n_4">4</string>
    <string name="n_5">5</string>
    <string name="n_6">6</string>
    <string name="n_7">7</string>
    <string name="n_8">8</string>
    <string name="n_9">9</string>
</resources>
